fixed spacing on nav borders

--- a/src/containers/Nav/index.css
+++ b/src/containers/Nav/index.css
@@ -35,6 +35,7 @@
 }
 
 .nav-item {
+  border: 1px solid #2b2b2b;
   padding: 0;
 }
 
@@ -43,7 +44,11 @@
 }
 
 .nav-item a, a.nav-item, .header-info{
-    color: #ffffff;
+  color: white;
+}
+
+.nav-item a:hover{
+  color: red;
 }
 
 .header-info {
